<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplaySignUP"
    android:background="@drawable/beba_signup">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email"
        android:layout_marginTop="100dp"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:textColorHint="@color/black"
        android:id="@+id/emmail"

        />
 <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/pass"
    android:hint="@string/enter_password"
    android:layout_below="@+id/emmail"
    android:textStyle="italic|bold"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:textSize="35sp"
    android:autofillHints="password"
    android:inputType="textPassword"
    android:textColorHint="@color/black"

    />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="35sp"
        android:textStyle="bold|italic" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_below="@+id/confirm"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold|normal"
        android:clickable="true"
        android:focusable="true"
        android:onClick="newpage"/>
</RelativeLayout>