<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:background="@color/purple_700">

 <EditText
     android:id="@+id/EnterEmail"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="150dp"
     android:autofillHints="emailAddress"
     android:hint="@string/enter_email_account"
     android:inputType="textEmailAddress"
     android:textColorHint="@color/black"
     android:textSize="48sp"
     android:textStyle="bold|italic"

     tools:ignore="DuplicateSpeakableTextCheck" />
 <EditText
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hint="@string/enter_password"
     android:layout_below="@+id/EnterEmail"
     android:id="@+id/password"
     android:layout_centerHorizontal="true"
     android:textColorHint="@color/black"
     android:textSize="35sp"
     android:textStyle="italic|bold"
     android:layout_marginTop="20dp"
     android:inputType="textPassword"
     android:autofillHints="password"

     />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/password"
     android:layout_centerHorizontal="true"
     android:textStyle="bold|normal"
     android:text="@string/login"
     android:textSize="48sp"
     android:layout_marginTop="20dp"
     android:clickable="true"
     android:focusable="true"
     android:onClick="newpage"
     android:id="@+id/batn"/>

</RelativeLayout>
