<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
   android:background="@color/purple_200"
    >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"

        android:orientation="vertical">


        <ImageView
            android:id="@+id/BebaImage"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/beba_1"
            android:contentDescription="@string/todo" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/logo_b"
            android:layout_marginStart="15dp"
            android:hint="@string/log_in"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            android:textColorHint="@color/white"
            android:id="@+id/loginButton"
            android:onClick="login"

        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:id="@+id/signUp"
            android:clickable="true"
            android:contextClickable="true"
            android:onClick="signup"
            android:focusable="true"
            tools:targetApi="m" />

     </LinearLayout>
</LinearLayout>